force-app/main/default/objects/SEG_Rango_SLA__mdt/SEG_Rango_SLA__mdt.object-meta.xml
<CustomObject>
    <description>Metadata para indicar la hora de inicio y fin de los SLA</description>
    <label>SEG_Rango_SLA</label>
    <pluralLabel>SEG_Rangos_SLA</pluralLabel>
</CustomObject>