force-app/main/default/objects/SEG_Rango_SLA__mdt/fields/SEG_Hora_Inicio_SLA__c.field-meta.xml
<CustomField>
    <fullName>SEG_Hora_Inicio_SLA__c</fullName>
    <description>Indica la hora de inicio de los SLA</description>
    <label>Hora Inicio SLA</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>