force-app/main/default/objects/SEG_Rango_SLA__mdt/fields/SEG_Horario_Activo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Horario_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si el horario es el activo</description>
    <label>SEG_Horario_Activo</label>
    <type>Checkbox</type>
</CustomField>