force-app/main/default/objects/SEG_Rango_SLA__mdt/fields/SEG_Minutos_Inicio_SLA__c.field-meta.xml
<CustomField>
    <fullName>SEG_Minutos_Inicio_SLA__c</fullName>
    <description>Minutos de la hora de inicio de los SLA</description>
    <label>Minutos Inicio SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>